# projet_rdv

./: CMakeLists.txt  README.md
src/: Geom.h  Point.h  Triangle.cpp  Triangle.h  main.cpp  point.cpp
